y.output
State 19 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce


Grammar

    0 $accept: Prog $end

    1 Prog: Declarations StmtSeq

    2 Declarations: Dec Declarations
    3             | %empty

    4 $@1: %empty

    5 Dec: Int Ident $@1 ';'

    6 StmtSeq: Stmt StmtSeq
    7        | %empty

    8 Stmt: Write Expr ';'
    9     | Id '=' Expr ';'
   10     | IF '(' BExpr ')' '{' StmtSeq '}'

   11 BExpr: Expr EQ Expr

   12 Expr: Expr '+' Term
   13     | Expr '-' Term
   14     | Term

   15 Term: Term '*' Factor
   16     | Term '/' Factor
   17     | Term '%' Factor
   18     | Term '^' Factor
   19     | Factor
   20     | Term '>' Factor
   21     | Term '<' Factor
   22     | Term EQ Factor
   23     | Term GTE Factor
   24     | Term LTE Factor

   25 Factor: '-' Factor
   26       | IntLit
   27       | Ident

   28 Id: Ident


Terminals, with rules where they appear

$end (0) 0
'%' (37) 17
'(' (40) 10
')' (41) 10
'*' (42) 15
'+' (43) 12
'-' (45) 13 25
'/' (47) 16
';' (59) 5 8 9
'<' (60) 21
'=' (61) 9
'>' (62) 20
'^' (94) 18
'{' (123) 10
'}' (125) 10
error (256)
Ident (258) 5 27 28
IntLit (259) 26
Int (260) 5
Write (261) 8
IF (262) 10
EQ (263) 11 22
GTE (264) 23
LTE (265) 24


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
Prog (26)
    on left: 1, on right: 0
Declarations (27)
    on left: 2 3, on right: 1 2
Dec (28)
    on left: 5, on right: 2
$@1 (29)
    on left: 4, on right: 5
StmtSeq (30)
    on left: 6 7, on right: 1 6 10
Stmt (31)
    on left: 8 9 10, on right: 6
BExpr (32)
    on left: 11, on right: 10
Expr (33)
    on left: 12 13 14, on right: 8 9 11 12 13
Term (34)
    on left: 15 16 17 18 19 20 21 22 23 24, on right: 12 13 14 15 16
    17 18 20 21 22 23 24
Factor (35)
    on left: 25 26 27, on right: 15 16 17 18 19 20 21 22 23 24 25
Id (36)
    on left: 28, on right: 9


State 0

    0 $accept: . Prog $end

    Int  shift, and go to state 1

    $default  reduce using rule 3 (Declarations)

    Prog          go to state 2
    Declarations  go to state 3
    Dec           go to state 4


State 1

    5 Dec: Int . Ident $@1 ';'

    Ident  shift, and go to state 5


State 2

    0 $accept: Prog . $end

    $end  shift, and go to state 6


State 3

    1 Prog: Declarations . StmtSeq

    Ident  shift, and go to state 7
    Write  shift, and go to state 8
    IF     shift, and go to state 9

    $default  reduce using rule 7 (StmtSeq)

    StmtSeq  go to state 10
    Stmt     go to state 11
    Id       go to state 12


State 4

    2 Declarations: Dec . Declarations

    Int  shift, and go to state 1

    $default  reduce using rule 3 (Declarations)

    Declarations  go to state 13
    Dec           go to state 4


State 5

    5 Dec: Int Ident . $@1 ';'

    $default  reduce using rule 4 ($@1)

    $@1  go to state 14


State 6

    0 $accept: Prog $end .

    $default  accept


State 7

   28 Id: Ident .

    $default  reduce using rule 28 (Id)


State 8

    8 Stmt: Write . Expr ';'

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Expr    go to state 18
    Term    go to state 19
    Factor  go to state 20


State 9

   10 Stmt: IF . '(' BExpr ')' '{' StmtSeq '}'

    '('  shift, and go to state 21


State 10

    1 Prog: Declarations StmtSeq .

    $default  reduce using rule 1 (Prog)


State 11

    6 StmtSeq: Stmt . StmtSeq

    Ident  shift, and go to state 7
    Write  shift, and go to state 8
    IF     shift, and go to state 9

    $default  reduce using rule 7 (StmtSeq)

    StmtSeq  go to state 22
    Stmt     go to state 11
    Id       go to state 12


State 12

    9 Stmt: Id . '=' Expr ';'

    '='  shift, and go to state 23


State 13

    2 Declarations: Dec Declarations .

    $default  reduce using rule 2 (Declarations)


State 14

    5 Dec: Int Ident $@1 . ';'

    ';'  shift, and go to state 24


State 15

   27 Factor: Ident .

    $default  reduce using rule 27 (Factor)


State 16

   26 Factor: IntLit .

    $default  reduce using rule 26 (Factor)


State 17

   25 Factor: '-' . Factor

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Factor  go to state 25


State 18

    8 Stmt: Write Expr . ';'
   12 Expr: Expr . '+' Term
   13     | Expr . '-' Term

    ';'  shift, and go to state 26
    '+'  shift, and go to state 27
    '-'  shift, and go to state 28


State 19

   14 Expr: Term .
   15 Term: Term . '*' Factor
   16     | Term . '/' Factor
   17     | Term . '%' Factor
   18     | Term . '^' Factor
   20     | Term . '>' Factor
   21     | Term . '<' Factor
   22     | Term . EQ Factor
   23     | Term . GTE Factor
   24     | Term . LTE Factor

    EQ   shift, and go to state 29
    GTE  shift, and go to state 30
    LTE  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34
    '^'  shift, and go to state 35
    '>'  shift, and go to state 36
    '<'  shift, and go to state 37

    EQ        [reduce using rule 14 (Expr)]
    $default  reduce using rule 14 (Expr)


State 20

   19 Term: Factor .

    $default  reduce using rule 19 (Term)


State 21

   10 Stmt: IF '(' . BExpr ')' '{' StmtSeq '}'

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    BExpr   go to state 38
    Expr    go to state 39
    Term    go to state 19
    Factor  go to state 20


State 22

    6 StmtSeq: Stmt StmtSeq .

    $default  reduce using rule 6 (StmtSeq)


State 23

    9 Stmt: Id '=' . Expr ';'

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Expr    go to state 40
    Term    go to state 19
    Factor  go to state 20


State 24

    5 Dec: Int Ident $@1 ';' .

    $default  reduce using rule 5 (Dec)


State 25

   25 Factor: '-' Factor .

    $default  reduce using rule 25 (Factor)


State 26

    8 Stmt: Write Expr ';' .

    $default  reduce using rule 8 (Stmt)


State 27

   12 Expr: Expr '+' . Term

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Term    go to state 41
    Factor  go to state 20


State 28

   13 Expr: Expr '-' . Term

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Term    go to state 42
    Factor  go to state 20


State 29

   22 Term: Term EQ . Factor

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Factor  go to state 43


State 30

   23 Term: Term GTE . Factor

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Factor  go to state 44


State 31

   24 Term: Term LTE . Factor

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Factor  go to state 45


State 32

   15 Term: Term '*' . Factor

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Factor  go to state 46


State 33

   16 Term: Term '/' . Factor

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Factor  go to state 47


State 34

   17 Term: Term '%' . Factor

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Factor  go to state 48


State 35

   18 Term: Term '^' . Factor

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Factor  go to state 49


State 36

   20 Term: Term '>' . Factor

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Factor  go to state 50


State 37

   21 Term: Term '<' . Factor

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Factor  go to state 51


State 38

   10 Stmt: IF '(' BExpr . ')' '{' StmtSeq '}'

    ')'  shift, and go to state 52


State 39

   11 BExpr: Expr . EQ Expr
   12 Expr: Expr . '+' Term
   13     | Expr . '-' Term

    EQ   shift, and go to state 53
    '+'  shift, and go to state 27
    '-'  shift, and go to state 28


State 40

    9 Stmt: Id '=' Expr . ';'
   12 Expr: Expr . '+' Term
   13     | Expr . '-' Term

    ';'  shift, and go to state 54
    '+'  shift, and go to state 27
    '-'  shift, and go to state 28


State 41

   12 Expr: Expr '+' Term .
   15 Term: Term . '*' Factor
   16     | Term . '/' Factor
   17     | Term . '%' Factor
   18     | Term . '^' Factor
   20     | Term . '>' Factor
   21     | Term . '<' Factor
   22     | Term . EQ Factor
   23     | Term . GTE Factor
   24     | Term . LTE Factor

    EQ   shift, and go to state 29
    GTE  shift, and go to state 30
    LTE  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34
    '^'  shift, and go to state 35
    '>'  shift, and go to state 36
    '<'  shift, and go to state 37

    EQ        [reduce using rule 12 (Expr)]
    $default  reduce using rule 12 (Expr)


State 42

   13 Expr: Expr '-' Term .
   15 Term: Term . '*' Factor
   16     | Term . '/' Factor
   17     | Term . '%' Factor
   18     | Term . '^' Factor
   20     | Term . '>' Factor
   21     | Term . '<' Factor
   22     | Term . EQ Factor
   23     | Term . GTE Factor
   24     | Term . LTE Factor

    EQ   shift, and go to state 29
    GTE  shift, and go to state 30
    LTE  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34
    '^'  shift, and go to state 35
    '>'  shift, and go to state 36
    '<'  shift, and go to state 37

    EQ        [reduce using rule 13 (Expr)]
    $default  reduce using rule 13 (Expr)


State 43

   22 Term: Term EQ Factor .

    $default  reduce using rule 22 (Term)


State 44

   23 Term: Term GTE Factor .

    $default  reduce using rule 23 (Term)


State 45

   24 Term: Term LTE Factor .

    $default  reduce using rule 24 (Term)


State 46

   15 Term: Term '*' Factor .

    $default  reduce using rule 15 (Term)


State 47

   16 Term: Term '/' Factor .

    $default  reduce using rule 16 (Term)


State 48

   17 Term: Term '%' Factor .

    $default  reduce using rule 17 (Term)


State 49

   18 Term: Term '^' Factor .

    $default  reduce using rule 18 (Term)


State 50

   20 Term: Term '>' Factor .

    $default  reduce using rule 20 (Term)


State 51

   21 Term: Term '<' Factor .

    $default  reduce using rule 21 (Term)


State 52

   10 Stmt: IF '(' BExpr ')' . '{' StmtSeq '}'

    '{'  shift, and go to state 55


State 53

   11 BExpr: Expr EQ . Expr

    Ident   shift, and go to state 15
    IntLit  shift, and go to state 16
    '-'     shift, and go to state 17

    Expr    go to state 56
    Term    go to state 19
    Factor  go to state 20


State 54

    9 Stmt: Id '=' Expr ';' .

    $default  reduce using rule 9 (Stmt)


State 55

   10 Stmt: IF '(' BExpr ')' '{' . StmtSeq '}'

    Ident  shift, and go to state 7
    Write  shift, and go to state 8
    IF     shift, and go to state 9

    $default  reduce using rule 7 (StmtSeq)

    StmtSeq  go to state 57
    Stmt     go to state 11
    Id       go to state 12


State 56

   11 BExpr: Expr EQ Expr .
   12 Expr: Expr . '+' Term
   13     | Expr . '-' Term

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28

    $default  reduce using rule 11 (BExpr)


State 57

   10 Stmt: IF '(' BExpr ')' '{' StmtSeq . '}'

    '}'  shift, and go to state 58


State 58

   10 Stmt: IF '(' BExpr ')' '{' StmtSeq '}' .

    $default  reduce using rule 10 (Stmt)
